# mcp-waifu-chat

./: .env.example  .gitignore  README.md  manim-animation-README.md  manim-animation.py  pyproject.toml  pytest.ini  requirements.txt  run.py
docs/: index.html
mcp_waifu_chat/: __init__.py  ai.py  api.py  config.py  db.py  models.py  utils.py
tests/: conftest.py  test_ai_config.py  test_api.py  test_db.py  test_openrouter_key_resolution.py
